[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.25.2", features = ["aio", "tokio-comp"] }
scylla = { version = "0.12.0", features = ["chrono", "time", "full-serialization"] }
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full"] }
